--- a/dos33.html
+++ b/dos33.html
@@ -5661,15 +5661,15 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 360C:4A             059             LSR A                                           ; ..
 360D:09 C0          060             ORA #$<span class='n'>C0</span>                                        ; ..
 360F:85 3F          061             STA <a class='d' href='#BTEMP'>BTEMP</a>+<span class='n'>1</span>                                     ; ..
-3611:A9 5C          062             LDA #BRETRY     ; PROM ROUTINE OFFSET           ; ..
+3611:A9 5C          062             LDA #<a class='v' href='#BRETRY'  >BRETRY</a>     ; PROM ROUTINE OFFSET           ; ..
 3613:85 3E          063             STA <a class='d' href='#BTEMP'>BTEMP</a>                                       ; ..
 3615:18             064             CLC             ;BUMP LOAD ADDRESS UP TO        ; ..
-3616:AD FE 08       065             LDA LOADADDR+<span class='n'>1</span>  ; LAST PAGE SO WE               ; ..
+3616:AD FE 08       065             LDA <a class='v' href='#LOADADDR'>LOADADDR</a>+<span class='n'>1</span>  ; LAST PAGE SO WE               ; ..
 3619:6D FF 08       066             ADC <a class='d' href='#BGRPGC'>BGRPGC</a>      ;  CAN LOAD 'EM BACKWARDS       ; ..
-361C:8D FE 08       067             STA LOADADDR+<span class='n'>1</span>                                  ; ..
+361C:8D FE 08       067             STA <a class='v' href='#LOADADDR'>LOADADDR</a>+<span class='n'>1</span>                                  ; ..
                     068 * READ IN ANOTHER BSECTR FROM                               ; ..
                     069 *  TRACK ZERO...                                            ; ..
-361F:AE FF 08       070 <a class='f' name='READNEXT' >READNEXT    </a>LDX BGRPGC                                      ; ..
+361F:AE FF 08       070 <a class='f' id='361F' name='READNEXT' >READNEXT    </a>LDX BGRPGC                                      ; ..
 3622:30 15          071             BMI GOLOADER    ;=&gt;ALL DONE...EXECUTE IT!       ; ..
 3624:BD 4D 08       072             LDA TABLE,X     ;GET PHYSICAL BSECTR NUMBER     ; .. /sarcasm Real original name there guys
 3627:85 3D          073             STA BSECTR      ; AND SET FOR BOOT PROM READ    ; ..          You couldn't call it <span class='code'>LOGSECTR</span> for Logical Sector??
