Add address for LOC1 and DR1

--- a/dos33.html
+++ b/dos33.html
@@ -1088,8 +1088,8 @@ With that "legalese" out of the way ... enjoy the read!
 1B0B:A0 00          00149 113 <a class='f' id='1B0B' name='DR0A'    >DR0A        </a>LDY #<span class='n'>0</span>          ; APPLE TEST
                     00150 114 <a class='f' id='1B0D' name='DR1B'    >DR1B        </a>EQU *                                           ; unused label
 1B0D:A1 40          00151 115             LDA (<a class='v' href='#ZPGWRK' >ZPGWRK</a>,X)
-1B0F:85 26          00152 116             STA <a  class='v' href='#LOC1'   >LOC1</a>                                        ; LOC1 = MemTestVal
-<hr>1B11:98             00153 117 <a class='f' id='1B11' name='DR1'         >DR1         </a>TYA                                             ; === Page <a class="page" name="page112">112</a> ===
+1B0F:85 26          00152 116             STA <a  class='v' href='#LOC1'   >LOC1</a>                                        ; LOC1 = MemTestVal<hr class='page'>
+1B11:98             00153 117 <a class='f' id='1B11' name='DR1'         >DR1         </a>TYA                                             ; === Page <a class="page" name="page112">112</a> ===
 1B12:45 26          00154 118             EOR <a  class='v' href="#LOC1"   >LOC1</a>
 1B14:85 26          00155 119             STA <a  class='v' href="#LOC1"   >LOC1</a>
 1B16:98             00156 120             TYA
