More hr cleanup

--- a/dos33.html
+++ b/dos33.html
@@ -1319,8 +1319,8 @@ With that "legalese" out of the way ... enjoy the read!
 1C3F:80 1D          00335 299             DW  <a class="v" href="#AS2VT" >AS2VT</a>+<span class='n'>8</span>
 1C41:C1 2A          00336 300             DW  <a class="v" href="#SAT2"  >SAT2   </a>                                     ; [6] Start Address Table 2 in <a class="x" href="#FDOSENT">FDOSENT</a>
 1C43:FD 2A          00337 301             DW  <a class="v" href="#EAT2"  >EAT2   </a>
-1C45:E4 37          00338 302             DW  <a class="v" href="#BAIOB" >BAIOB  </a>                                     ; [7]
-<hr>1C47:E8 37          00339 303             DW  <a class="v" href="#">ADOSLD</a>+<span class='n'>2</span>                                    ; === Page <a class="page" name="page115">115</a> ===
+1C45:E4 37          00338 302             DW  <a class="v" href="#BAIOB" >BAIOB  </a>                                     ; [7]<hr class='page'>
+1C47:E8 37          00339 303             DW  <a class="v" href="#">ADOSLD</a>+<span class='n'>2</span>                                    ; === Page <a class="page" name="page115">115</a> ===
 1C49:EE 37          00340 304             DW  <a class="v" href="#IBDCTP">IBDCTP </a>                                     ; [8]
 1C4B:F0 37          00341 305             DW  <a class="v" href="#IBDCTP">IBDCTP</a>+<span class='n'>2</span>
 1C4D:00 00 00 00    00342 <a class='line' name='RELOCTR.306'>306</a>             DFB <span class='n'>0</span>,<span class='n'>0</span>,<span class='n'>0</span>,<span class='n'>0</span>                                     ; <a class='mem' name='_1C4D' coords='12'>wastes</a> 12 bytes -- never referenced !
